# BillableTracker

./: .gitignore  .replit  app.py  helpers.py  models.py  pyproject.toml  requirements.txt  routes.py
static/css/: custom.css
static/js/: entries.js  timer.js
templates/: base.html  clients.html  dashboard.html  invoices.html  login.html  register.html  settings.html  time_entries.html
