[project]
name = "repl-nix-billabletracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.2.5",
    "werkzeug>=3.1.3",
    "pytz>=2024.2",
    "flask-migrate",
]
